Re-enable loot tables